syntax = "proto3";

package object_storage;

import "google/protobuf/empty.proto";

service C4 {
  rpc CreateBucket(CreateBucketRequest) returns (google.protobuf.Empty) {}
  rpc ListBuckets(ListBucketsRequest) returns (ListBucketsResponse) {}
  rpc DeleteBucket(DeleteBucketRequest) returns (google.protobuf.Empty) {}

  rpc PutObject(stream PutObjectRequest) returns (PutObjectResponse) {}
  rpc GetObject(GetObjectRequest) returns (stream GetObjectResponse) {}
  rpc ListObjects(ListObjectsRequest) returns (ListObjectsResponse) {}
  rpc HeadObject(HeadObjectRequest) returns (HeadObjectResponse) {}
  rpc DeleteObject(DeleteObjectRequest) returns (google.protobuf.Empty) {}
}

message CreateBucketRequest {
  string bucket_name = 1;
}

message ListBucketsRequest {
  optional uint64 limit = 1;
  optional uint64 offset = 2;
}

message ListBucketsResponse {
  repeated string bucket_names = 1;
}

message DeleteBucketRequest {
  string bucket_name = 1;
}

message PutObjectRequest {
  oneof req {
    ObjectID id = 1;
    bytes object_part = 2;
  }
}

message PutObjectResponse {
  ObjectMetadata metadata = 1;
}

message GetObjectRequest {
  ObjectID id = 1;
}

message GetObjectResponse {
  bytes object_part = 1;
}

message ListObjectsRequest {
  string bucket_name = 1;
  optional uint64 limit = 2;
  optional uint64 offset = 3;
  optional string sorting_order = 4;
  optional string prefix = 5;
}

message ListObjectsResponse {
  repeated ObjectMetadata metadata = 1;
}

message HeadObjectRequest {
  ObjectID id = 1;
}

message HeadObjectResponse {
  ObjectMetadata metadata = 1;
}

message DeleteObjectRequest {
  ObjectID id = 1;
}

message ObjectMetadata {
  ObjectID id = 1;
  uint64 size = 2;
  int64 created_at = 3;
}

message ObjectID {
  string bucket_name = 1;
  string object_key = 2;
}